Bug 43407 - [bisected i965] piglit asmparsertest/ARBvp1.0/attrib-03.txt fails
Summary: [bisected i965] piglit asmparsertest/ARBvp1.0/attrib-03.txt fails
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: All Linux (All)
: high normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 42993
  Show dependency treegraph
 
Reported: 2011-12-01 00:49 UTC by fangxun
Modified: 2011-12-05 17:48 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2011-12-01 00:49:38 UTC
System Environment:
--------------------------
Arch:           i386
Platform:       huronriver
Libdrm:         (master)2.4.27-3-g37ccce5e390a9d757474920f488cafa1cf89854a
Mesa:           (master)2134d2f35baadf4117e48aa3315608403622b79a
Xserver:
(master)xorg-server-1.11.99.1-43-gb2015a2c01711646bb7ae23d684abee0cd55d4d0
Xf86_video_intel:  (master)2.17.0-41-gd8f2e87473eae81e07922271b5f608fdceb4ae5e
Kernel:  (drm-intel-next)9a10f401a401ca69c6537641c8fc0d6b57b5aee8

Bug detailed description:
------------------------- 
Piglit asmparsertest/ARBvp1.0/attrib-03.txt and asmparsertest/ARBvp1.0/attrib-04.txt fail on ironlake and sandybridge.  
Bisect shows 762c9766c93697af8d7fbaa729aed118789dbe8e is the first bad commit.
commit 762c9766c93697af8d7fbaa729aed118789dbe8e
Author:     Mathias Fröhlich <Mathias.Froehlich@web.de>
AuthorDate: Mon Oct 31 22:23:51 2011 +0100
Commit:     Mathias Fröhlich <Mathias.Froehlich@web.de>
CommitDate: Tue Nov 29 06:37:19 2011 +0100

    mesa: Use VERT_ATTRIB_* indexed array in gl_array_object.

    Replace the distinct struct gl_client_array members in gl_array_object by
    an array of gl_client_arrays indexed by VERT_ATTRIB_*.
    Renumber the vertex attributes slightly to keep the old semantics of the
    distinct array members. Make use of the upper 32 bits in VERT_BIT_*.
    Update all occurances of the distinct struct members with the array
    equivalents.

    Signed-off-by: Mathias Froehlich <Mathias.Froehlich@web.de>
    Reviewed-by: Eric Anholt <eric@anholt.net>


Reproduce steps:
----------------
1. start X
2. ./asmparsertest -auto ARBvp1.0 tests/asmparsertest/shaders/ARBvp1.0/attrib-03.txt
Comment 1 Mathias Fröhlich 2011-12-02 23:27:34 UTC
Commit b14c06e10d570edcb4dcbea173d71751563616e7 fixes this on classic swrast.
Given the change, I guess that this also fixes this test on an intel chip. Can you verify?
Thanks!

Mathias
Comment 2 fangxun 2011-12-05 17:48:09 UTC
Verified with Mesa master commit 887c349d543d5b6d681845eb441be88acb8e0063.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.